Fixed 'dropcap' misalignment issue.

--- a/css-styles/dropcaps.css
+++ b/css-styles/dropcaps.css
@@ -1,5 +1,5 @@
 .dropcap {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
     float: left;
     font-size: 70px;
     padding-right: 8px;
